# chess-engine

./: CMakeLists.txt  Makefile  README.md  chess  main  main.c  pawn_attacks.c
include/: bitboard_constants.h  bitboard_utils.h  constants.h  king_attacks.h  knight_attacks.h  numc.h  pawn_attacks.h  utils.h
src/: bitboard_utils.c  constants.c  king_attacks.c  knight_attacks.c  main.c  numc.c  pawn_attacks.c  utils.c
